--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -9,9 +9,11 @@
 @plugin 'tailwindcss-react-aria-components';
 
 @theme {
-  --font-sans: "Geologica Variable", ui-sans-serif, system-ui, sans-serif,
+  --font-sans:
+    "Geologica Variable", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-mono: "Geist Mono", "ui-monospace", "SFMono-Regular", "Menlo", "Monaco",
+  --font-mono:
+    "Geist Mono", "ui-monospace", "SFMono-Regular", "Menlo", "Monaco",
     "Consolas", '"Liberation Mono"', '"Courier New"', "monospace";
 
   --color-border: var(--border);
